Mac crashing on submit input type=image (bug 126268), r=sicking@bigfoot.com, sr=brendan@mozilla.org